--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/add">添加题目</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/manage">管理题目</a>
+                        </li>
                     </ul>
                 </div>
             </div>
