--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -6,7 +6,7 @@
         <h1 class="display-5 fw-bold">欢迎使用自动阅卷系统</h1>
         <p class="col-md-8 fs-4">本系统采用 C 语言编写核心阅卷逻辑，Python Flask 提供 Web 交互界面。</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <a href="/exam" class="btn btn-primary btn-lg px-4 me-md-2">开始考试</a>
+            <a href="/start_exam" class="btn btn-primary btn-lg px-4 me-md-2">开始考试</a>
             <a href="/add" class="btn btn-outline-secondary btn-lg px-4">添加题目</a>
         </div>
     </div>
