--- a/web/templates/edit.html
+++ b/web/templates/edit.html
@@ -12,8 +12,13 @@
         <label for="image" class="form-label">题目图片 (可选)</label>
         {% if question.image %}
         <div class="mb-2">
-            <img src="{{ url_for('static', filename='uploads/' + question.image) }}" alt="Current Image" style="max-height: 200px; max-width: 100%;">
-            <div class="form-text">当前图片</div>
+            <img src="{{ url_for('uploaded_file', filename=question.image) }}" alt="Current Image" style="max-height: 200px; max-width: 100%;">
+            <div class="form-check mt-2">
+                <input class="form-check-input" type="checkbox" value="yes" id="delete_image" name="delete_image">
+                <label class="form-check-label text-danger" for="delete_image">
+                    删除当前图片
+                </label>
+            </div>
         </div>
         {% endif %}
         <input type="file" class="form-control" id="image" name="image" accept="image/*">
