--- a/web/templates/manage.html
+++ b/web/templates/manage.html
@@ -7,10 +7,10 @@
     <div class="card-body">
         <form method="GET" action="{{ url_for('manage') }}" class="row g-3">
             <div class="col-md-4">
-                <input type="text" class="form-control" name="search" placeholder="搜索题目内容..." value="{{ search }}">
+                <input type="text" class="form-control" name="search" placeholder="搜索题目内容..." value="{{ search }}" style="color: black; background-color: white;">
             </div>
             <div class="col-md-3">
-                <select class="form-select" name="category">
+                <select class="form-select" name="category" style="color: black; background-color: white;">
                     <option value="">所有分类</option>
                     {% for cat in categories %}
                     <option value="{{ cat }}" {% if current_category == cat %}selected{% endif %}>{{ cat }}</option>
@@ -30,9 +30,9 @@
 </div>
 
 {% if questions %}
-<div class="table-responsive">
-    <table class="table table-striped table-hover align-middle">
-        <thead>
+<div class="table-responsive bg-white rounded p-1">
+    <table class="table table-striped table-hover align-middle text-dark mb-0">
+        <thead class="table-dark">
             <tr>
                 <th scope="col">ID</th>
                 <th scope="col" style="width: 40%;">题目描述</th>
